<resources>
    <string name="app_name">TextRecognitionXML</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="pick_image">Pick Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="image_chosen_by_user">image chosen by user</string>
    <string name="scan">Scan</string>
    <string name="navigation_icon">Navigation Icon</string>
    <string name="result">Result</string>
    <string name="edit_extracted_text">Edit extracted text</string>
    <string name="scanning_animation_line">Scanning animation line</string>
    <string name="recent_files">Recent Files</string>
    <string name="recent_results">Recent Results</string>
    <string name="expand_recent_results_list">Expand recent results list</string>
    <string name="my_documents">My\nDocuments</string>
    <string name="list">List</string>
    <string name="check_box">Check Box</string>
    <string name="folders">Folders</string>
    <string name="add">Add</string>
    <string name="folder_s_icon">Folder\'s icon</string>
    <string name="files">Files</string>
    <string name="target_language">Target language</string>
    <string name="enter_title_here">Enter title here</string>
    <string name="title">Title</string>
    <string name="save_document">Save Document</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="enter_folder_name_here">Enter folder name here</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="pick_a_folder">Pick a folder</string>
    <string name="translate_button">translate button</string>
    <string name="save_button">save button</string>
    <string name="extract_entity">extract entity</string>
    <string name="detect_colors">detect colors</string>
    <string name="image_labeling">image labeling</string>
    <string name="show_image">show image</string>
    <string name="show_options">show options</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_theme">change theme</string>
</resources>