<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingStart="25dp"
    android:paddingTop="25dp"
    android:paddingEnd="25dp"
    android:paddingBottom="25dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/etFolderName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/font_color_dark"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/enter_folder_name_here"
        android:importantForAutofill="no"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/font_color_light" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_secondary"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/font_color_dark" />
    </LinearLayout>
</LinearLayout>