<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_white"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingBottom="25dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/save_document"
            android:textAlignment="center"
            android:textColor="@color/font_color_dark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLabelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/title"
            android:textColor="@color/font_color_dark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <EditText
            android:id="@+id/etDocumentTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/enter_title_here"
            android:importantForAutofill="no"
            android:inputType="text"
            android:labelFor="@id/etDocumentTitle"
            android:textColor="@color/font_color_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLabelTitle"
            tools:ignore="LabelFor" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spFolders"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDocumentTitle"
            app:startIconDrawable="@drawable/ic_folder">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/tvAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:text="@string/pick_a_folder" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btnCreateNewFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/create_new_folder"
            android:textColor="@color/font_color_dark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spFolders" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_button"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/font_color_light"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCreateNewFolder" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>

