<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.activities.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.example.textrecognitionxml.ui.fragments.HomeFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_home">

    </androidx.fragment.app.FragmentContainerView>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/mlBottomNavigationContainer"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layoutDescription="@xml/floating_action_button_group_scene"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bottom_navigation_background"
            app:itemIconTint="@color/blue"
            app:itemTextColor="@color/black"
            app:labelVisibilityMode="selected"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/navigation" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabTakePhoto"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/take_photo"
            android:visibility="invisible"
            app:backgroundTint="@color/lighter_blue"
            app:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_camera_outlined"
            app:tint="@color/gray" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabPickImage"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/pick_image"
            android:visibility="invisible"
            app:backgroundTint="@color/lighter_blue"
            app:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_insetEdge="bottom"
            app:srcCompat="@drawable/ic_upload_outlined"
            app:tint="@color/gray" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingButton"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/scan"
            app:backgroundTint="@color/lighter_blue"
            app:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_scan_outlined"
            app:tint="@color/gray" />
    </androidx.constraintlayout.motion.widget.MotionLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="60dp" />
</androidx.constraintlayout.widget.ConstraintLayout>