<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.activities.ScanResultActivity">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/bottom_navigation_background"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/navigation_icon"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/result"
            android:textAlignment="center"
            android:textColor="@color/font_color_dark"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ivShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/navigation_icon"
            android:src="@drawable/ic_share" />

        <ImageView
            android:id="@+id/ivTranslate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/navigation_icon"
            android:src="@drawable/ic_translate" />

        <ImageView
            android:id="@+id/ivSaveDocument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="85dp"
            android:contentDescription="@string/navigation_icon"
            android:src="@drawable/ic_save" />

        <ImageView
            android:id="@+id/ivReadDocumentFromDatabase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="120dp"
            android:contentDescription="@string/navigation_icon"
            android:src="@drawable/ic_get" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ddTargetLanguages"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tvExtractedText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:startIconDrawable="@drawable/ic_language">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/tvAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/target_language" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvExtractedText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/roboto_regular"
        android:maxLines="999999999"
        android:scrollbars="vertical"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textIsSelectable="true"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ddTargetLanguages" />

    <TextView
        android:id="@+id/tvTranslatedText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/roboto_regular"
        android:maxLines="999999999"
        android:scrollbars="vertical"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textIsSelectable="true"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ddTargetLanguages" />

    <com.example.textrecognitionxml.views.TextArea
        android:id="@+id/etEditor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="start"
        android:importantForAutofill="no"
        android:inputType="text|textMultiLine|textNoSuggestions"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/ddTargetLanguages"
        tools:ignore="LabelFor" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/lighter_blue"
        android:contentDescription="@string/edit_extracted_text"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/gray" />
</androidx.constraintlayout.widget.ConstraintLayout>